# Task_Scheduler

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/common/: config.py
src/contracts/: task_source.py
src/infrastructure/: constants.py  display.py  logger.py  validation.py
src/models/: create_field.py  deadline_field.py  description_field.py  id_field.py  priority_field.py  status_field.py  task.py
src/services/: task_queue.py  task_receiver.py
src/sources/: api_source.py  file_source.py  generate_source.py
tasks_source/: friday.txt  saturday.txt  thursday.txt
tests/: test_api_source.py  test_file_source.py  test_generate_source.py  test_sources.py  test_task.py  test_task_display.py  test_task_queue.py  test_task_receiver.py
