[project]
name = "Python_Task_Scheduler"
version = "1.0.1"
description = "A program to work with tasks."
requires-python = ">=3.13.5"
dependencies = [
    "pytest>=8.4.2",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.uv]
dev-dependencies=[
    "pyfakefs>=5.10.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
]

[tool.pytest.ini_options]
addopts = [
  "--cov=src",
  "--cov-branch",
  "--cov-report=term-missing",
  "-q",
]
testpaths = ["tests"]
pythonpath = ["src"]


[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = ["*/__init__.py", "*/main.py", "*/shell.py", "*/common/*", "*/enums/*", "*/dependencies/*", "*/contracts/*"]


[tool.coverage.report]
show_missing = true
fail_under = 10
